@@ -2037,6 +2037,20 @@ public:
     virtual wxVisualAttributes GetDefaultAttributes() const;
 
     /**
+        Return the DPI of the display used by this window.
+
+        The returned value can be different for different windows on systems
+        with support for per-monitor DPI values, such as Microsoft Windows 10.
+
+        If the DPI is not available, returns @c wxSize(0,0) object.
+
+        @see wxDisplay::GetPPI(), wxDPIChangedEvent
+
+        @since 3.1.3
+     */
+    virtual wxSize GetDPI() const;
+
+    /**
         Returns the font for this window.
 
         @see SetFont()
